src/test/ui/consts/const-deref-ptr.stderr
error[E0658]: dereferencing raw pointers in statics is unstable
  --> $DIR/const-deref-ptr.rs:4:29
   |
LL |     static C: u64 = unsafe {*(0xdeadbeef as *const u64)};
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #51911 <https://github.com/rust-lang/rust/issues/51911> for more information
   = help: add `#![feature(const_raw_ptr_deref)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
